Workarounds for various IE bugs: 1. border top to make left menu align 2. display:inline-block followed by: inline to make li's inline blocked 3. ditto for ul 4. width set for IE due to lack of support for min-width (old workaround removed, second added but greyed out) 5. changed selector as it was returning an empty set on $$('#elements input') 6. border-box, added workaround, but wound up giving up. 7. Corrected for hr bug in which IE adds 7 pixels above and below all hr tags 8. Adjusted height of start image to be that of the toolbars, so that the above tweaks do not mess up FF. 9. FF's toolbar now has lost its roundness.  Am living with it for now.

--- a/projects/moorte/l2.css
+++ b/projects/moorte/l2.css
@@ -2,8 +2,8 @@ body{ background:#2E1302 url('images/bg.jpg') repeat-x; margin:0; padding:26px 1
 hr{  background-color:#DFD7CB; border:0; border-bottom:#fff solid 1px; margin:8px;}
 span{display:inline-block}
 #main ul li{ list-style-image:none; list-style-position:outside; list-style-type:square; line-height:1.5}
-#stage {  max-width:900px; min-width:760px; width:760px; margin:0 auto; text-align:left;  }
-#stage {  width:auto !important;	}
+#stage {  max-width:900px; min-width:760px; margin:0 auto; text-align:left; _width:770px; _xwidth:expression(document.body.clientWidth > 1000? 'auto' :'1000px'); }
+
 
 #header{ background:#F8F6F3 url('images/header_left.gif') no-repeat;}
 #TRcorner{background:url('images/header_right.gif') no-repeat right top; height:24px;}
